<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Accountant</string>

    <string name="account_details">Accounts Data</string>
    <string name="act_id">Act ID</string>
    <string name="act_name">Accounts Name</string>
    <string name="amount">Amount</string>
    <string name="no_records_found">No records found…</string>
    <string name="total_amount">Total: ₹ <![CDATA[<b>%1$s</b>]]></string>
    <string name="account_data">Account Data</string>
    <string name="act_name_head">Act Name</string>
    <string name="dsdate">dsdate</string>
    <string name="module">module</string>
    <string name="scrnname">scrnname</string>
    <string name="actname1" tools:ignore="Typos">actname1</string>
    <string name="actmaintype">actmaintype</string>
    <string name="actunder">actunder</string>
    <string name="export_as_pdf">Export as PDF</string>
    <string name="export_as_pdf_v2">Export PDF v2</string>

    <string name="delete">Delete</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="delete_message">Are you sure you want to Delete…?</string>

    <string name="developer_info">Developer Info</string>
    <string name="dev_name">Rammohan Locharla</string>
    <string name="code_name">code name</string>
    <string name="dev_code_name">Jungle Mystic</string>
    <string name="about_me">About Me</string>
    <string name="dev_about">CA Aspirant by academics &amp; Android Kotlin Developer by passion. \n \n Pet Lover, Music Lover, Foodie, sometimes cook.</string>

    <string name="go_to_network_settings">Go to Network Settings</string>
    <string name="no_internet">No Internet</string>

    <string name="export_as_excel">Export as Excel</string>
    <string name="scan_doc">Scan Document</string>
    <string name="scan">Scan</string>

    <string name="edit_account">Edit Account</string>
    <string name="update">Update</string>
    <string name="account_name">Account Name</string>

    <string name="pdf_view">PDF View</string>
    <string name="file_name">File Name</string>
</resources>