<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.HomeFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/blue">

        <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/app_icon"
                    android:layout_width="30dp"
                    android:layout_height="40dp"
                    android:src="@drawable/app_icon"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:contentDescription="@null"/>

                <TextView
                    android:id="@+id/app_name"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:text="@string/app_name"
                    android:textSize="28sp"
                    android:fontFamily="@font/dancing_script_regular"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    app:layout_constraintTop_toTopOf="@id/app_icon"
                    app:layout_constraintBottom_toBottomOf="@id/app_icon"
                    app:layout_constraintStart_toEndOf="@id/app_icon"
                    android:layout_marginStart="15dp"
                    android:gravity="center_vertical"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.appbar.MaterialToolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/account_details_head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account_details"
        android:fontFamily="@font/quicksand_bold"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/app_bar"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"/>

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="2dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:background="@color/blue"
        app:layout_constraintEnd_toEndOf="@id/account_details_head"
        app:layout_constraintStart_toStartOf="@id/account_details_head"
        app:layout_constraintTop_toBottomOf="@id/account_details_head" />

    <TableLayout
        android:id="@+id/table_heads"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/account_details_head"
        android:layout_marginTop="20dp"
        android:stretchColumns="1,2,3"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="50dp">

        <TableRow
            android:padding="10dp"
            android:background="@drawable/table_head_bg">

            <TextView
                android:id="@+id/account_id_head"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/act_id"
                android:fontFamily="@font/quicksand_bold"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:gravity="center"
                android:layout_marginStart="10dp"/>

            <TextView
                android:id="@+id/account_name_head"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/act_name"
                android:fontFamily="@font/quicksand_bold"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:gravity="center"
                android:layout_column="1"/>

            <TextView
                android:id="@+id/amount_head"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/amount"
                android:fontFamily="@font/quicksand_bold"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:gravity="center"
                android:layout_column="1"/>

        </TableRow>

    </TableLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/table_heads"
        android:layout_marginTop="5dp"
        android:layout_marginStart="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/list_item"/>

</androidx.constraintlayout.widget.ConstraintLayout>