<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.EditAccountFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/blue">

        <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/back_icon"
                    android:layout_width="30dp"
                    android:layout_height="40dp"
                    android:src="@drawable/back_icon"
                    app:tint="@color/white"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:contentDescription="@null"/>

                <TextView
                    android:id="@+id/fragment_label"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:text="@string/edit_account"
                    android:textSize="16sp"
                    android:fontFamily="@font/gotham_rounded_bold"
                    android:textColor="@color/white"
                    app:layout_constraintTop_toTopOf="@id/back_icon"
                    app:layout_constraintBottom_toBottomOf="@id/back_icon"
                    app:layout_constraintStart_toEndOf="@id/back_icon"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:layout_marginEnd="30dp"
                    android:layout_marginStart="15dp"
                    android:gravity="center_vertical"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.appbar.MaterialToolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/app_bar">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/account_name_til"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/app_bar"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginTop="30dp"
            app:boxStrokeColor="@color/blue"
            app:boxStrokeWidth="1dp"
            android:hint="@string/account_name"
            app:hintTextColor="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/account_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"
                android:textColor="@color/black"
                android:fontFamily="@font/quicksand_bold" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/account_amount_til"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/app_bar"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginTop="30dp"
            app:boxStrokeColor="@color/blue"
            app:boxStrokeWidth="1dp"
            android:hint="@string/amount"
            app:hintTextColor="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/amount"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="number"
                android:textColor="@color/black"
                android:fontFamily="@font/quicksand_bold" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/update_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update"
            android:backgroundTint="@color/blue"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="30dp"
            android:layout_gravity="center"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>