<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.AccountDetailFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/blue">

        <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/back_icon"
                    android:layout_width="30dp"
                    android:layout_height="40dp"
                    android:src="@drawable/back_icon"
                    app:tint="@color/white"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:contentDescription="@null"/>

                <TextView
                    android:id="@+id/fragment_label"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    tools:text="ATR Equipments"
                    android:textSize="16sp"
                    android:fontFamily="@font/gotham_rounded_bold"
                    android:textColor="@color/white"
                    app:layout_constraintTop_toTopOf="@id/back_icon"
                    app:layout_constraintBottom_toBottomOf="@id/back_icon"
                    app:layout_constraintStart_toEndOf="@id/back_icon"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:layout_marginEnd="30dp"
                    android:layout_marginStart="15dp"
                    android:gravity="center_vertical"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.appbar.MaterialToolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:id="@+id/account_data_sv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/app_bar"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="30dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/account_data_head"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/account_data"
                android:textSize="18sp"
                android:fontFamily="@font/gotham_rounded_bold"
                android:textColor="@color/blue"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="20dp"/>

            <View
                android:layout_width="0dp"
                android:layout_height="0.7dp"
                android:layout_marginTop="2dp"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:background="@color/black"
                app:layout_constraintEnd_toEndOf="@id/account_data_head"
                app:layout_constraintStart_toStartOf="@id/account_data_head"
                app:layout_constraintTop_toBottomOf="@id/account_data_head" />


            <LinearLayout
                android:id="@+id/ll_stack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/account_data_head"
                android:orientation="vertical"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/act_id_head"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:text="@string/act_id"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:fontFamily="@font/quicksand_regular"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/act_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="582"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:fontFamily="@font/quicksand_regular" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp">

                    <TextView
                        android:id="@+id/act_name_head"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:text="@string/act_name_head"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:fontFamily="@font/quicksand_regular"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/act_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="ATR Equipments"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:fontFamily="@font/quicksand_regular" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp">

                    <TextView
                        android:id="@+id/amount_head"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:text="@string/amount"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:fontFamily="@font/quicksand_regular"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/amount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="0.0"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:fontFamily="@font/quicksand_regular" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp">

                    <TextView
                        android:id="@+id/dsdate_head"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:text="@string/dsdate"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:fontFamily="@font/quicksand_regular"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/dsdate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="0.0"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:fontFamily="@font/quicksand_regular" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp">

                    <TextView
                        android:id="@+id/module_head"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:text="@string/module"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:fontFamily="@font/quicksand_regular"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/module"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="0.0"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:fontFamily="@font/quicksand_regular" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp">

                    <TextView
                        android:id="@+id/scrnname_head"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:text="@string/scrnname"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:fontFamily="@font/quicksand_regular"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/scrnname"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="0.0"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:fontFamily="@font/quicksand_regular" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp">

                    <TextView
                        android:id="@+id/actname1_head"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:text="@string/actname1"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:fontFamily="@font/quicksand_regular"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/actname1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="0.0"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:fontFamily="@font/quicksand_regular" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp">

                    <TextView
                        android:id="@+id/actmaintype_head"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:text="@string/actmaintype"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:fontFamily="@font/quicksand_regular"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/actmaintype"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="A"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:fontFamily="@font/quicksand_regular" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp">

                    <TextView
                        android:id="@+id/actunder_head"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:text="@string/actunder"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:fontFamily="@font/quicksand_regular"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/actunder"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="1"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:fontFamily="@font/quicksand_regular" />

                </LinearLayout>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>